@@ -13,3 +13,4 @@
 24/03/20 - É possivel selecionar médicos na pagina de marcar consultas.
 24/03/21 - Pequenas correções. Inicio do sistema de escolher data.
 24/03/24 - Tem o sistema de escolher a data mas ele ainda precisa guardar a data para poder escolher o horario.
+24/03/25 - É possivel escolher datas e associa-las a médicos. Muitas correções pequenas.
